--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Beer Drinker</h1>
-    <form method="POST" action="/solve">
+    <form method="POST" action="/postdatatohandlingserver">
         <label for="beer">Beers to drink:</label>
         <br>
         <input type="number" name="beer" id="beer" required>
